[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zooDS"
version = "0.0.4"
authors = [
  { name="b3rtoz", email="b3rtoz@proton.me" },
]
description = "An automotive UDS cli tool"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/b3rtoz/zooDS"
Issues = "https://github.com/b3rtoz/zooDS/issues"

[project.scripts]
zooDS = "zooDS.cli:app"